# 2dgameengine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
assets/scripts/: Level1.lua
src/: CMakeLists.txt  animation.cpp  animation.h  asset_manager.cpp  asset_manager.h  collision.cpp  collision.h  component.h  constants.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  font_manager.cpp  font_manager.h  game.cpp  game.h  levels.cpp  levels.h  locator.cpp  locator.h  main.cpp  map.cpp  map.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  sound.cpp  sound.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  video_manager.cpp  video_manager.h  window.cpp  window.h
src/components/: collider_component.cpp  collider_component.h  component.h  component_container.h  joystick_control_component.cpp  joystick_control_component.h  keyboard_control_component.cpp  keyboard_control_component.h  projectile_emitter_component.cpp  projectile_emitter_component.h  sound_control_component.cpp  sound_control_component.h  sprite_component.cpp  sprite_component.h  text_label_component.cpp  text_label_component.h  tile_component.cpp  tile_component.h  transform_component.cpp  transform_component.h
tests/: CMakeLists.txt  rectangle_test.cpp
tests/components/: transform_component_test.cpp
